Correct alignment of header icons.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -143,7 +143,7 @@ a.anchor h2 {
 
 a.anchor i.header-icon {
   vertical-align: 0%;
-  margin-left: -42px;
+  margin-left: -54px;
 }
 
 /* NAVBAR */
